--- a/canvas.css
+++ b/canvas.css
@@ -1,33 +1,43 @@
-/* box-sizing: border-box; */
+/*  Karl Dickensheets
+    Canvas Assignment
+    Css File       */
+
+/* main container class */
 .container{
     display: flex;
     justify-content: center;
+    box-sizing: border-box;
     margin: auto;
     border-style: solid;
     border-color:  #000000;
     width:95%;
     background-color: #ACACAC;
     text-align: center;
-
 }
 
-
+/* generic canvas class */
 canvas{
-    /* width: 400px;
-    height: 400px; */
     background-color: #EEEEEE;
     border-bottom: 2px black solid;
 }
 
+/* circle canvas container class */
 .left{
+    box-sizing: border-box;
     margin: 10px;
+    border-style: solid;
+    border-color:  #000000;
     padding: 5px;
     width: 46%;
     background-color: #EC7C4F;
 }
 
+/* rectangle canvas container class */
 .right{
+    box-sizing: border-box;
     margin: 10px;
+    border-style: solid;
+    border-color:  #000000;
     padding: 5px;
     width: 46%;
     background-color: #09EEB5;
